Fixing discoteca template identation and not showing anything if there are no songs for an album

--- a/web/static/web/css/discoteca.css
+++ b/web/static/web/css/discoteca.css
@@ -5,3 +5,7 @@
 .lamina img{
 	width: 100%;
 }
+
+figcaption{
+	margin-bottom: 10px;
+}
